Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 <h2>
 <a id="idea" class="anchor" href="#idea" aria-hidden="true"><span class="octicon octicon-link"></span></a>Idea</h2>
 
-<p>Main purpose of designing <code>poorDuino</code> was to <em>utilize</em> dozen Atmega8/Atmega168 chips, which were collected by me, for few last years.</p>
+<p>Main purpose of designing <code>poorDuino</code> was to <em>utilize</em> dozen Atmega8/Atmega168 chips, which were collected by me, for last few years. I do like Arduino as a form factor and don't like as IDE. Thus I decided to design this board to fulfil my not so sophisticated expectations: keep compatibility with original Arduino Uno and no support for programming via USB (ISP FTW!).</p>
 
-<p><code>poorDuino</code>'s name comes from reduced manufacturing costs (i.e. no USB programmer onboard). </p>
+<p><code>poorDuino</code>'s name comes from reduced manufacturing costs (i.e. no USB programmer onboard). It might be decreased more, but it would not fulfill my needs.</p>
 
 <h2>
 <a id="features" class="anchor" href="#features" aria-hidden="true"><span class="octicon octicon-link"></span></a>Features</h2>
@@ -51,6 +51,14 @@
 <li>USB connector and USB2UART bridge removed,</li>
 <li>ICSP connector for programming (external programmer is necessary)</li>
 </ul>
+
+<h2>
+<a id="resources" class="anchor" href="#resources" aria-hidden="true"><span class="octicon octicon-link"></span></a>Resources</h2>
+
+<ol>
+<li>Arduino UNO <a href="https://www.arduino.cc/en/Main/arduinoBoardUno">https://www.arduino.cc/en/Main/arduinoBoardUno</a>
+</li>
+</ol>
         </section>
 
         <aside id="sidebar">
